fix, text alignment, routing

--- a/src/views/home-page/home-page.scss
+++ b/src/views/home-page/home-page.scss
@@ -14,7 +14,11 @@
         align-items: stretch;
         
         .btn{
+            display: flex;
             width: 100%;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
         }
     }
 }
